# hexsen

./: Receiver_24bit_ard_time.py  Receiver_24bit_ard_time2.py  plot_sensor.py  sensor_data_24bit_20260419_185551.csv  sensor_data_24bit_20260419_185752.csv  sensor_data_24bit_20260419_223147.csv  sensor_data_24bit_20260508_134744.csv  test_blue.py  ur_command_6axis.py  ur_test.py
data/: Log_Sensor_Hex_.txt  Log_Sensor_Hex_1.txt  Log_Sensor_Hex_2.txt  Log_Sensor_Hex_3.txt  Log_Sensor_Hex_4.txt  path_generator.py  plot_data.py  plot_sensor.py
data/20260419/: head.txt
data/20260419/data_circle/: Log_Robot_Pos_.txt  Log_Sensor_Hex_.txt
data/20260419/data_line/: Log_Robot_Pos_.txt  Log_Sensor_Hex_.txt
data/20260419/data_square/: Log_Robot_Pos_.txt  Log_Sensor_Hex_.txt
data/20260419/data_triangle/: Log_Robot_Pos_.txt  Log_Sensor_Hex_.txt
data/basic/: path_circle.csv  path_square.csv  path_trajectory.csv  path_triangle.csv
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/sensor/: setup.py
ros2_ws/src/writer/: CMakeLists.txt
ros2_ws/src/writer/src/: ur_rtde_node.cpp  writer_sensor.cpp  writer_sensor_v2.cpp  writer_v2.cpp
ros2_ws_tribo/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
ros2_ws_tribo/log/: latest_build
ros2_ws_tribo/src/tribo_plot/: setup.py
ros2_ws_tribo/src/ur_cpp/: package.xml
tribo-slide-main/: .gitignore  README.md  environment.yml  requirements.txt
tribo-slide-main/MLSTM-FCN-torch/: train.py
tribo-slide-main/data_collection/: ur_test.py
(+56 files in other folders)
